--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.12"
+    "@storybook/react": "^6.3.12",
+    "storybook-addon-pseudo-states": "^1.0.0"
   }
 }
