--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
+    "chromatic": "^6.2.3",
     "storybook-addon-pseudo-states": "^1.0.0"
   }
 }
